Refactor: Use List.toList() and remove unused imports
Co-authored-by: bren <bren@juanantonio.info>